vpc.tf
resource "aws_vpc" "nginx_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "Custom VPC"
  }
}
